--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -127,8 +127,8 @@
                     <View
                         android:id="@+id/person_line_1"
                         android:layout_width="fill_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/colorPrimary" />
+                        android:layout_height="0.1dp"
+                        android:background="@color/xui_config_color_gray_9" />
 
                     <LinearLayout
                         android:id="@+id/person_userInfo"
@@ -161,9 +161,9 @@
                         </LinearLayout>
 
                         <View
-                            android:layout_width="0.5dp"
+                            android:layout_width="0.1dp"
                             android:layout_height="fill_parent"
-                            android:background="@color/colorPrimary" />
+                            android:background="@color/xui_config_color_gray_9" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -190,9 +190,9 @@
                         </LinearLayout>
 
                         <View
-                            android:layout_width="0.5dp"
+                            android:layout_width="0.1dp"
                             android:layout_height="fill_parent"
-                            android:background="@color/colorPrimary" />
+                            android:background="@color/xui_config_color_gray_9" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
