--- a/app/src/main/res/layout/score_cardview.xml
+++ b/app/src/main/res/layout/score_cardview.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@+id/course_no" />
 
         <TextView
-            android:id="@+id/ScoreName"
+            android:id="@+id/course_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -76,14 +76,14 @@
             android:textSize="13dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ScoreName" />
+            app:layout_constraintTop_toBottomOf="@+id/course_name" />
 
         <TextView
             android:id="@+id/ScoreFinal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="85"
-            android:textColor="#CC000000"
+            android:textColor="#AA000000"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
