perf:优化更新提醒和下载更新的方式，提高更新成功率。 perf:登录流程优化，设置学期界面不会再出现加载中的情况 perf:考试成绩和实验成绩改为显示课程代码 perf:计划课程布局 perf:移除酷安相关功能

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -204,7 +204,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="45dp"
-            android:text="密码错误的同学请输入智慧校园的密码，智慧校园网站地址：http://icampus.guet.edu.cn/ ，也即统一登录平台，若不记得密码，请联系辅导员或加群寻求帮助。"
+            android:text="密码错误的同学请输入智慧校园的密码，智慧校园网站地址：http://icampus.guet.edu.cn/ ，也即统一登录平台，,若之前没有登录过，需要先在网页上登录一次，成功后即可在APP上正常登录，若不记得密码，请联系辅导员或加群寻求帮助。"
             android:textSize="13dp"/>
 
     </RelativeLayout>
