perf:添加了部分图标和加载动画 perf:所有需要序列化的实体类添加了编号 perf:考试安排、计划课程等只在数据变化时刷新视图

--- a/app/src/main/res/layout/activity_examscore.xml
+++ b/app/src/main/res/layout/activity_examscore.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.ExamActivity"
+    tools:context=".moreFun.ExamScoreActivity"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -60,13 +60,24 @@
 
     </RelativeLayout>
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/examscore_not_find"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="没有查询到符合条件的考试成绩信息!"
-        android:textSize="25dp"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4"
+            app:srcCompat="@drawable/d_kong"
+            app:tint="@color/colorPrimary" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
