--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_white"
@@ -10,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp" >
+        android:padding="12dp" >
 
         <ImageView
             android:id="@+id/iv_dialoghint"
@@ -25,12 +26,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="课程表可以更新了"
-                android:textColor="#000"
-                android:textSize="18dp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="课程表可以更新了"
+                    android:textColor="#000"
+                    android:textSize="18dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView_no"
+                    android:clickable="true"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/d_guanbi"
+                    app:tint="@color/cardview_dark_background" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <TextView
                 android:id="@+id/tv_dialoghint"
@@ -44,9 +67,9 @@
     </LinearLayout>
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="0.1dp"
-        android:background="#000" />
+        android:background="@color/xui_config_color_gray_9" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,44 +77,31 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/btn_hint_no"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="8dp"
-            android:text="取消"
-            android:textColor="@color/tab_unchecked"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="0.1dp"
-            android:layout_height="match_parent"
-            android:background="#000" />
-
-        <Button
             android:id="@+id/btn_hint_addQQ"
+            android:clickable="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="8dp"
             android:text="群内下载"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <View
             android:layout_width="0.1dp"
             android:layout_height="match_parent"
-            android:background="#000" />
+            android:background="@color/xui_config_color_gray_9" />
 
         <Button
             android:id="@+id/btn_hint_yes"
+            android:clickable="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="8dp"
             android:text="更新"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
